[gd_scene load_steps=2 format=3 uid="uid://i8q7v4j6y5n3q"]

[ext_resource type="Script" path="res://scripts/ui/crafting_menu.gd" id="1_2k4m3"]

[node name="CraftingMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k4m3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Crafting"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="RecipeList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
focus_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="RecipeDetails" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="RecipeTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Recipe Title"

[node name="RecipeDescription" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Recipe description goes here..."
autowrap_mode = 2

[node name="Ingredients" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="IngredientsTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails/Ingredients"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Ingredients"

[node name="IngredientsList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails/Ingredients"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Result" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ResultTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails/Result"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Result"

[node name="ResultItem" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails/Result"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemIcon" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails/Result/ResultItem"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ItemName" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/RecipeDetails/Result/ResultItem"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Item Name"

[node name="CraftButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Craft"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close" 